Bump POM version to 2.0.0 and Java version to 17