@@ -8,15 +8,28 @@
 
     <groupId>io.github.northmaxdev</groupId>
     <artifactId>jep321util</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>Java 11 HTTP Client Utilities</name>
     <inceptionYear>2023</inceptionYear>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <url>https://github.com/northmaxdev/jep321util</url>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <guava.version>31.1-jre</guava.version>
         <junit.version>5.9.2</junit.version>
         <equalsverifier.version>3.14.1</equalsverifier.version>
